--- a/src/app/body/body.component.css
+++ b/src/app/body/body.component.css
@@ -33,8 +33,8 @@
 }
 h2{
    font-size: 1.5rem;
-   text-align: center;
    font-family: Raleway;
+   text-align: center;
 }
 .image{
     float: right;
@@ -44,7 +44,15 @@ h2{
     width:30rem;
     height:25rem;
     z-index: 11111;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 5px;
+    transition: 0.3s;
 }
+.sheridan:hover {
+    width:29rem;
+    height:24rem;
+  }
 .containerzzz{
     display: grid;
     grid-template-columns: auto auto;
@@ -78,4 +86,11 @@ h2{
     height: 300px;
     width: 300px;
   }
-  
+  .experience{
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 50px;
+    }
+    h2{
+        margin-top: 5rem;
+    }
